# HebaChain

./: .algokit.toml  HebaChain.code-workspace  README.md
.algokit/: .copier-answers.yml
projects/HebaChain-contracts/: .algokit.toml  README.md  pyproject.toml
projects/HebaChain-contracts/.algokit/: .copier-answers.yml
projects/HebaChain-contracts/smart_contracts/artifacts/game/: Game.approval.teal  Game.arc32.json  Game.clear.teal  game_client.py
projects/HebaChain-contracts/smart_contracts/artifacts/heba_chain/: HebaChain.approval.teal  HebaChain.arc32.json  HebaChain.clear.teal  heba_chain_client.py
projects/HebaChain-contracts/smart_contracts/artifacts/heba_chain_product_history/: HebaChainProductHistory.approval.teal  HebaChainProductHistory.arc32.json  HebaChainProductHistory.clear.teal  heba_chain_product_history_client.py
projects/HebaChain-contracts/smart_contracts/game/: contract.py  deploy_config.py
projects/HebaChain-contracts/smart_contracts/heba_chain/: contract.py  deploy_config.py
projects/HebaChain-contracts/smart_contracts/heba_chain_product_history/: contract.py  deploy_config.py
projects/HebaChain-contracts/tests/: conftest.py  game_test.py  heba_chain_product_history_test.py  heba_chain_test.py
projects/HebaChain-frontend/: .algokit.toml  README.md  package-lock.json  package.json
projects/HebaChain-frontend/.algokit/: .copier-answers.yml
projects/HebaChain-frontend/src/: App.tsx  Home.tsx  main.tsx
projects/HebaChain-frontend/src/components/: AppCalls.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  updateModal.tsx  (+1 more)
(+22 files in other folders)
